objects/Underwriting_Record__c.object
<CustomObject>
    <fields>
        <fullName>Network_Access_Sold_Op_Gain__c</fullName>
        <formula>Network_Access_Sold_Revenue__c - Network_Access_Sold_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Network Access Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Network_Access_Sold_Revenue__c</fullName>
        <label>Network Access Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Network_Expense_Methodology__c</fullName>
        <label>Network Expense Methodology</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Billed to Client</fullName>
                </value>
                <value>
                    <fullName>Combination</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Next_Renewal_Date__c</fullName>
        <description>UW Next Renewal Date Renewals</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Next Renewal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OON_Shared_Savings_Current_Op_Gain__c</fullName>
        <formula>OON_Shared_Savings_Current_Revenue__c - 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Shared Savings Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OON_Shared_Savings_Current_Revenue__c</fullName>
        <label>OON Shared Savings Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OON_Shared_Savings_Sold_Op_Gain__c</fullName>
        <formula>OON_Shared_Savings_Sold_Revenue__c - 0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OON Shared Savings Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>OON_Shared_Savings_Sold_Revenue__c</fullName>
        <label>OON Shared Savings Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Operational_Guarantee__c</fullName>
        <label>% Operational Guarantee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Opportunity_Stage__c</fullName>
        <formula>TEXT(Opportunity__r.StageName)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Opportunity Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Underwriting Records</relationshipLabel>
        <relationshipName>Underwriting_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Profits__c</fullName>
        <label>Other Profits</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Other_Programs_Current_Expense__c</fullName>
        <label>Other Programs Current Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Programs_Current_Op_Gain__c</fullName>
        <formula>Other_Programs_Current_Revenue__c - Other_Programs_Current_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Programs Current Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Programs_Current_Revenue__c</fullName>
        <label>Other Programs Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Programs_Sold_Expense__c</fullName>
        <label>Other Programs Sold Expense</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Programs_Sold_Op_Gain__c</fullName>
        <formula>Other_Programs_Sold_Revenue__c - Other_Programs_Sold_Expense__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Other Programs Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Other_Programs_Sold_Revenue__c</fullName>
        <label>Other Programs Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PI_Fee_Credit_PCPM__c</fullName>
        <inlineHelpText>Guidance is $1.00 PMPM</inlineHelpText>
        <label>PI Fee Credit PCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PI_GROSS_Revenue_PCPM__c</fullName>
        <inlineHelpText>Book of business assumption is $2.57 PMPM</inlineHelpText>
        <label>PI GROSS Revenue PCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PI_Guarantee__c</fullName>
        <label>PI Guarantee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PI_OpGain_PCPM__c</fullName>
        <inlineHelpText>Book of business assumption is $1.57 PMPM</inlineHelpText>
        <label>PI OpGain PCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Performance_Guarantee_Dollars_at_Risk__c</fullName>
        <description>The annual dollar amount put at risk for all performance guarantees other than discount.</description>
        <inlineHelpText>The annual dollar amount put at risk for all performance guarantees other than discount.</inlineHelpText>
        <label>Performance Guarantee Dollars at Risk</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Pricing_Strategy_Cur_Op_Gain__c</fullName>
        <label>Pharmacy Pricing Strategy Cur Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Pricing_Strategy_Sold_Op_Gain__c</fullName>
        <label>Pharmacy Pricing Strategy Sold Op Gain</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Profit__c</fullName>
        <formula>Rx_Operating_Gain_Margin__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pharmacy Profit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Rebate_Credit_Current_Revenue__c</fullName>
        <label>Pharmacy Rebate Credit Current Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pharmacy_Rebate_Credit_Sold_Revenue__c</fullName>
        <label>Pharmacy Rebate Credit Sold Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Strategy_Op_Gain_Change__c</fullName>
        <label>Pricing Strategy Op Gain Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Pricing_Strategy_Total_Op_Gain_Change_PC__c</fullName>
        <label>Pricing Strategy TotalOpGain Change PCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Primary_Funding_Quote_Type__c</fullName>
        <label>Primary Funding Quote Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>FI</fullName>
                </value>
                <value>
                    <fullName>CP</fullName>
                </value>
                <value>
                    <fullName>ABF</fullName>
                </value>
                <value>
                    <fullName>ASO Only</fullName>
                </value>
                <value>
                    <fullName>ASO w/Stop Loss</fullName>
                </value>
                <value>
                    <fullName>JAA</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <description>Select the Product Code(s)</description>
        <label>Product Code</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>HMO</fullName>
                </value>
                <value>
                    <fullName>POS</fullName>
                </value>
                <value>
                    <fullName>PPO</fullName>
                </value>
                <value>
                    <fullName>EAP</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>IND</fullName>
                </value>
                <value>
                    <fullName>GenCHSA</fullName>
                </value>
                <value>
                    <fullName>GenCHRA</fullName>
                </value>
                <value>
                    <fullName>DEN</fullName>
                </value>
                <value>
                    <fullName>VIS</fullName>
                </value>
                <value>
                    <fullName>PPOHSA</fullName>
                </value>
                <value>
                    <fullName>PPOHRA</fullName>
                </value>
                <value>
                    <fullName>MEC Plus</fullName>
                </value>
                <value>
                    <fullName>MV Bronze</fullName>
                </value>
                <value>
                    <fullName>FH Den</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Contracts__c</fullName>
        <inlineHelpText>Est total subs w/ anticipated growth or reduction</inlineHelpText>
        <label>Proposed Contracts</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Member_to_Contracts__c</fullName>
        <formula>Proposed_Members__c  / Proposed_Contracts__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Proposed Member to Contracts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Members__c</fullName>
        <inlineHelpText>Est total members w/ anticipated growth or reduction</inlineHelpText>
        <label>Proposed Members</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposed_Wellquote_Risk_Factor__c</fullName>
        <label>Proposed Wellquote Risk Factor</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prospect_Status_LG__c</fullName>
        <label>Prospect Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Quoted</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
                <value>
                    <fullName>Declined by Sales</fullName>
                </value>
                <value>
                    <fullName>Declined by Underwriting</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prospect_Status__c</fullName>
        <label>Prospect Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Sold</fullName>
                </value>
                <value>
                    <fullName>Dead</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Quoted_ASO_Fee_PEPM_offset__c</fullName>
        <label>Quoted ASO Fee PEPM offset</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Annual_Revenue__c</fullName>
        <label>Quoted Annual Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Discount_Share__c</fullName>
        <label>Quoted Discount Share %</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Quoted_Risk_Factor__c</fullName>
        <description>SR-296 requested by Kim Freeman.</description>
        <inlineHelpText>Enter 4 digit quoted risk factor</inlineHelpText>
        <label>Quoted Risk Factor</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quoted_Sold_Broker_Comms_in_ASL_Fee_PEPM__c</fullName>
        <description>The PEPM commission amount quoted. This should be revised if the Sold amount is different.</description>
        <inlineHelpText>The PEPM commission amount quoted. This should be revised if the Sold amount is different.</inlineHelpText>
        <label>Quoted/Sold Broker Comms in ASL Fee PEPM</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Sold_Broker_Comms_in_ASO_Fee_PEPM__c</fullName>
        <description>The PEPM commission amount quoted. This should be revised if the Sold amount is different.</description>
        <inlineHelpText>The PEPM commission amount quoted. This should be revised if the Sold amount is different.</inlineHelpText>
        <label>Quoted/Sold Broker Comms in ASO Fee PEPM</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Sold_Broker_Comms_in_SSL_Fee_PEPM__c</fullName>
        <description>The PEPM commission amount quoted. This should be revised if the Sold amount is different.</description>
        <inlineHelpText>The PEPM commission amount quoted. This should be revised if the Sold amount is different.</inlineHelpText>
        <label>Quoted/Sold Broker Comms in SSL Fee PEPM</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Sold_Comm_PEPM__c</fullName>
        <inlineHelpText>The PEPM commission amount quoted. This should be revised if the Sold amount is different.</inlineHelpText>
        <label>Quoted/Sold Comm PEPM</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Quoted_Sold_Specific_Stop_Loss_Level__c</fullName>
        <description>The annual specific stop loss limit quoted. This should be revised if the Sold limit is different.</description>
        <inlineHelpText>The annual specific stop loss limit quoted. This should be revised if the Sold limit is different.</inlineHelpText>
        <label>Quoted/Sold Specific Stop Loss Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>REP_Factor_Percentage__c</fullName>
        <formula>Opportunity__r.REP_Factor_Percentage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Revenue Enhancement Provision Factor</inlineHelpText>
        <label>ASO REP Factor Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Reason_For_Decline__c</fullName>
        <label>Reason For Decline</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Competitive</fullName>
                </value>
                <value>
                    <fullName>Did not receive requested data</fullName>
                </value>
                <value>
                    <fullName>Bad large claims experience</fullName>
                </value>
                <value>
                    <fullName>Cannot match benefits</fullName>
                </value>
                <value>
                    <fullName>Group headquartered outside of Ohio</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recommend_Fee_w_Commission_Current__c</fullName>
        <inlineHelpText>Copy from SFDC tab of retention model</inlineHelpText>
        <label>Recommend Fee -w- Commission - Current</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommend_Fee_w_Commission_Formula__c</fullName>
        <formula>Recommended_ASO_Fee_Medical__c  +  Commission__c  +  Recommended_Rx_Fee__c  +  Rx_Rebate_Credit__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Recommend Fee -w- Commission - Formula</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommend_Fee_w_Commission_Renewal__c</fullName>
        <inlineHelpText>Copy from SFDC tab of retention model</inlineHelpText>
        <label>Recommend Fee -w- Commission - Renewal</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_ASO_Fee_Medical__c</fullName>
        <formula>Total_Base_Medical_Expense__c  +  Total_Network_Expense__c  +  Core_360_Expenses__c  +  Ancillary_CHS_Product_Expense__c  +  Total_Added_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Calculated Field</inlineHelpText>
        <label>Recommended ASO Fee Medical</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recommended_Rx_Fee__c</fullName>
        <inlineHelpText>Copy from SFDC tab of retention model</inlineHelpText>
        <label>Recommended Rx Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Original</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Refund_Eligible__c</fullName>
        <label>Refund Eligible?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Guaranteed__c</fullName>
        <inlineHelpText>Mandatory field used for Sales IC. Must select Yes or No.</inlineHelpText>
        <label>Renewal Guaranteed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_of_Base_Expense_Covered__c</fullName>
        <inlineHelpText>Copy from SFDC tab of retention model</inlineHelpText>
        <label>Renewal % of Base Expense Covered</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Renewal_of_Total_Expense_Covered__c</fullName>
        <inlineHelpText>Copy from SFDC tab of retention model</inlineHelpText>
        <label>Renewal % of Total Expense Covered</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Required_Op_Gain_Change__c</fullName>
        <label>Required Op Gain Change</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Required_Total_Op_Gain_Change_PCPM__c</fullName>
        <label>Required Total Op Gain Change PCPM</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Retiree_HRA_PG_Risk__c</fullName>
        <label>Retiree HRA PG Risk %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Retiree_HRA_PPPM_Fee__c</fullName>
        <label>Retiree HRA PPPM Fee</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rx_Billing_Admin_Fee__c</fullName>
        <inlineHelpText>Rx ASO fee set by UW; may not match what WPS provided in UW Tool (cell D12 – SDFC tab)</inlineHelpText>
        <label>Rx Billing Admin Fee</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rx_Disc_and_Dispensing_Fees_Guaranteed__c</fullName>
        <label>Rx Disc and Dispensing Fees Guaranteed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx_Exception_Pricing_Revenue__c</fullName>
        <inlineHelpText>Cell D18 of SDFC tab</inlineHelpText>
        <label>Rx Exception Pricing Revenue</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rx_Expense__c</fullName>
        <inlineHelpText>Cell D14 of SDFC tab</inlineHelpText>
        <label>Rx Expense</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rx_Minimum_Rebates_Guaranteed__c</fullName>
        <label>Rx Minimum Rebates Guaranteed</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rx_Net_ANA_Rebates_Retained__c</fullName>
        <inlineHelpText>Rx Net ANA Rebates Retained</inlineHelpText>
        <label>Rx Net ANA Rebates Retained</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rx_Net_Margin__c</fullName>
        <formula>Rx_Billing_Admin_Fee__c +  Rx_Expense__c  +  Rx_Rebate_Admin_Revenue__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rx Net Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rx_Operating_Gain_Margin__c</fullName>
        <formula>Rx_Net_Margin__c  +  Rx_Exception_Pricing_Revenue__c  +  Rx_Net_ANA_Rebates_Retained__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Should match D21 of SDFC tab of UW Tool and Rx total from profitability tab in retention model</inlineHelpText>
        <label>Rx Operating Gain Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rx_Rebate_Admin_Revenue__c</fullName>
        <inlineHelpText>Cell D13 of SDFC tab</inlineHelpText>
        <label>Rx Rebate Admin Revenue</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rx_Rebate_Credit__c</fullName>
        <inlineHelpText>Copy from SFDC tab of retention model</inlineHelpText>
        <label>Rx Rebate Credit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Rx_Rebates_Returned_to_Client__c</fullName>
        <inlineHelpText>0% if ASO fee credit in lieu of rebates</inlineHelpText>
        <label>Rx % Rebates Returned to Client</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Rx_Termination_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rx Termination Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDCLegacyID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>SFDC Legacy ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLRM_Rate_PCPM_Current__c</fullName>
        <inlineHelpText>enter rate for current SSL level and do not include ongoing claim load or other underwriting adj</inlineHelpText>
        <label>SLRM Rate PCPM Current</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SLRM_Rate_PCPM_Proposed__c</fullName>
        <inlineHelpText>will be different from current SLRM only if different SSL level is quoted/sold</inlineHelpText>
        <label>SLRM Rate PCPM Proposed</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSLFormulaPCPMRate__c</fullName>
        <label>SSL Formula PCPM Rate</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSLStopLossMargin__c</fullName>
        <formula>(  SSL_Final_Sold_PCPM_Rate__c / SSLFormulaPCPMRate__c ) - 1</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSL Stop Loss Margin %</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SSL_Benefit_Change__c</fullName>
        <label>SSL Benefit Change %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SSL_Claimants_over_Specific_Level__c</fullName>
        <label>SSL Claimants over Specific Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SSL_Commission__c</fullName>
        <label>SSL Commission</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSL_Commission_pct__c</fullName>
        <label>SSL Commission %</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SSL_Current_Incurred_Months__c</fullName>
        <label>SSL Current Incurred Months</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12/12</fullName>
                </value>
                <value>
                    <fullName>15/12</fullName>
                </value>
                <value>
                    <fullName>18/12</fullName>
                </value>
                <value>
                    <fullName>24/12</fullName>
                </value>
                <value>
                    <fullName>12/15</fullName>
                </value>
                <value>
                    <fullName>12/18</fullName>
                </value>
                <value>
                    <fullName>12/24</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSL_Current_Paid_Months__c</fullName>
        <label>SSL Current Paid Months</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12/12</fullName>
                </value>
                <value>
                    <fullName>15/12</fullName>
                </value>
                <value>
                    <fullName>18/12</fullName>
                </value>
                <value>
                    <fullName>24/12</fullName>
                </value>
                <value>
                    <fullName>12/15</fullName>
                </value>
                <value>
                    <fullName>12/18</fullName>
                </value>
                <value>
                    <fullName>12/24</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>SSL_Current_Rate_PCPM__c</fullName>
        <label>SSL Current Rate PCPM</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSL_Current_Specific_Level__c</fullName>
        <label>SSL Current Specific Level</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSL_Final_Rate_Action__c</fullName>
        <formula>SSL_Proposed_Rate_Action_Pre_Ben_Chg__c  +  SSL_Benefit_Change__c  +  SSL_UW_Discretionary__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SSL Final Rate Action %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SSL_Final_Sold_PCPM_Rate__c</fullName>
        <inlineHelpText>Enter proposed rate until renl is finalized</inlineHelpText>
        <label>SSL Final Sold PCPM Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SSL_Formula_Rate_Action__c</fullName>
        <label>SSL Formula Rate Action %</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SSL_Proposed_Incurred_Months__c</fullName>
        <label>SSL Proposed Incurred Months</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>12/12</fullName>
                </value>
                <value>
                    <fullName>15/12</fullName>
                </value>
                <value>
                    <fullName>18/12</fullName>
                </value>
                <value>
                    <fullName>24/12</fullName>
                </value>
                <value>
                    <fullName>12/15</fullName>
                </value>
                <value>
                    <fullName>12/18</fullName>
                </value>
                <value>
                    <fullName>12/24</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>